# InteraccionTT

./: .anjuta_sym_db.db  Makefile.am  Makefile.in  TestInclusion.txt  aclocal.m4  configure  configure.ac
.anjuta/session/: anjuta.session  dock-layout.xml
Optimized/: Makefile  config.h  config.status  libtool
Optimized/po/: Makefile  Makefile.in  POTFILES
Optimized/src/: Makefile  interacciontt
Optimized/src/.deps/: Events.Po  IOUtils.Po  geometry.Po  inclussion.Po  intersection.Po  p3Df.Po  splittriangles.Po  tetratree.Po
autom4te.cache/: output.0  output.1  traces.0  traces.1
src/: Events.cpp  IOUtils.cpp  IOUtils.h  Makefile.am  Makefile.am.bak  Makefile.in  TestInclusion.txt  a.out  constants.h  geometry.cpp  geometry.h  gmon.out  inclussion.cpp  inclussion.h  interaccionTT.sublime-workspace  intersection.cpp  intersection.h  main.cc  p3Df.cpp  p3Df.h  profC.txt  profilerC.txt  splittriangles.cpp  splittriangles.h  test  tetratree.cpp  tetratree.h
