## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" 

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = interacciontt

interacciontt_SOURCES = \
	p3Df.h         \
	p3Df.cpp         \
	tetratree.h         \
	geometry.h         \
	constants.h         \
	inclussion.h         \
	intersection.h         \
	Events.cpp         \
	IOUtils.h         \
	tetratree.cpp         \
	inclussion.cpp         \
	splittriangles.cpp         \
	geometry.cpp         \
	splittriangles.h         \
	intersection.cpp         \
	IOUtils.cpp

interacciontt_CFLAGS = \
	-pg

interacciontt_CPPFLAGS = \
	-pg

interacciontt_CXXFLAGS = \
	-pg

interacciontt_LDFLAGS = \
	-pg

interacciontt_LDADD = 

